Home bgd img set to pos:fixed to rmv white space & centered text on recycleables

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,12 +12,14 @@
   top: 0; 
   left: 0;
   height: 100%;
+  position: fixed;
+  z-index: -1;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   filter: blur(4px);
   -webkit-filter: blur(4px);
-  transform: scaleY(1.01);
+  /* transform: scaleY(1.01); */
   display: none;
 }
 
